# minetest-tr-to-po

./: .gitignore  README.md  pyproject.toml
minetest_tr_to_po/: convert.py
